[options]
component =
  {
    "versions": {
      "5.2": {
        "install_requires": [
          "reahl-component>=5.2,<5.3",
          "reahl-commands>=5.2,<5.3",
          "mysqlclient>=1.3,<2.1.9999"
        ]
      },
      "5.1": {
        "install_requires": [
          "reahl-component>=5.1,<5.2",
          "reahl-commands>=5.1,<5.2",
          "mysqlclient>=1.3,<1.4.9999"
        ]
      },
      "5.0": {
        "install_requires": [
          "reahl-component>=5.0,<5.1",
          "reahl-commands>=5.0,<5.1",
          "mysqlclient>=1.3,<1.4.9999"
        ]
      },
      "4.0": {
        "install_requires": [
          "reahl-component>=4.0,<4.1",
          "reahl-commands>=4.0,<4.1",
          "mysqlclient>=1.3,<1.3.9999"
        ]
      }
    }
  }

[options.entry_points]
  reahl.component.databasecontrols = 
    MysqlControl = reahl.mysqlsupport:MysqlControl



