[options]
tests_require =
  pytest>=3.0
  reahl-tofu
  reahl-stubble
  reahl-dev
  reahl-webdev
  reahl-browsertools
  reahl-postgresqlsupport

component = 
  configuration = "reahl.paypalsupport.paypalconfig:PayPalSiteConfig"
  persisted = [
    "reahl.paypalsupport.paypalsupport:PayPalOrder"
  ]
  [versions.'6.0']
  migrations = [
    "reahl.paypalsupport.migrations:AdjustJsonForMySqlCompatibility"
  ]
  install_requires = [
    "reahl-component>=6.0,<6.1",
    "reahl-sqlalchemysupport>=6.0,<6.1",
    "reahl-web>=6.0,<6.1",
    "reahl-web-declarative>=6.0,<6.1",
    "reahl-domain>=6.0,<6.1"
  ]
  [versions.'5.2']
  install_requires = [
    "reahl-component>=5.2,<5.3",
    "reahl-sqlalchemysupport>=5.2,<5.3",
    "reahl-web>=5.2,<5.3",
    "reahl-web-declarative>=5.2,<5.3",
    "reahl-domain>=5.2,<5.3"
  ]
  migrations = [
    "reahl.paypalsupport.migrations:CreatePaypal"
  ]
  

[options.entry_points]
reahl.translations = 
  reahl-paypalsupport = reahl.messages

[options.package_data]
* = 
  */LC_MESSAGES/*.mo
  *.js


