[metadata]
name = reahl-paypalsupport
version = 7.0.0
author = Iwan Vosloo
author_email = iwan@reahl.org
description = Support for payments via PayPal.
long_description = file: README.rst
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options.packages.find]
exclude = etc, build, dist

[options]
packages = find_namespace:

install_requires =
  reahl-component>=7.0,<7.1
  reahl-sqlalchemysupport>=7.0,<7.1
  reahl-web>=7.0,<7.1
  reahl-web-declarative>=7.0,<7.1
  reahl-domain>=7.0,<7.1
  paypal-checkout-serversdk

component = 
  configuration = "reahl.paypalsupport.paypalconfig:PayPalSiteConfig"
  persisted = [
    "reahl.paypalsupport.paypalsupport:PayPalOrder"
  ]
  [versions.'6.1']
  install_requires = [
    "reahl-component>=6.1,<6.2",
    "reahl-sqlalchemysupport>=6.1,<6.2",
    "reahl-web>=6.1,<6.2",
    "reahl-web-declarative>=6.1,<6.2",
    "reahl-domain>=6.1,<6.2"
  ]
  [versions.'6.0']
  migrations = [
    "reahl.paypalsupport.migrations:AdjustJsonForMySqlCompatibility"
  ]
  install_requires = [
    "reahl-component>=6.0,<6.1",
    "reahl-sqlalchemysupport>=6.0,<6.1",
    "reahl-web>=6.0,<6.1",
    "reahl-web-declarative>=6.0,<6.1",
    "reahl-domain>=6.0,<6.1"
  ]
  [versions.'5.2']
  install_requires = [
    "reahl-component>=5.2,<5.3",
    "reahl-sqlalchemysupport>=5.2,<5.3",
    "reahl-web>=5.2,<5.3",
    "reahl-web-declarative>=5.2,<5.3",
    "reahl-domain>=5.2,<5.3"
  ]
  migrations = [
    "reahl.paypalsupport.migrations:CreatePaypal"
  ]
  

[options.entry_points]
reahl.translations = 
  reahl-paypalsupport = reahl.messages

[options.package_data]
* = 
  */LC_MESSAGES/*.mo
  *.js


