[options]
component = 
  [tool.reahl-component]
  configuration = "reahl.sqlalchemysupport:SqlAlchemyConfig"
  persisted = [
    "reahl.sqlalchemysupport:SchemaVersion"
  ]
  [versions.'5.2']
  install_requires = [
    "reahl-component>=5.2,<5.3",
    "reahl-commands>=5.2,<5.3",
    "SQLAlchemy>=1.2.0,<1.4.999",
    "alembic>=0.9.6,<1.7.999"
  ]
  [versions.'5.1']
  install_requires = [
    "reahl-component>=5.1,<5.2",
    "reahl-commands>=5.1,<5.2",
    "SQLAlchemy>=1.2.0,<1.3.999",
    "alembic>=0.9.6,<1.4.999"
  ]
  [versions.'5.0']
  install_requires = [
    "reahl-component>=5.0,<5.1",
    "reahl-commands>=5.0,<5.1",
    "SQLAlchemy>=1.2.0,<1.3.999",
    "alembic>=0.9.6,<1.4.999"
  ]
  [versions.'4.0']
  install_requires = [
    "reahl-component>=4.0,<4.1",
    "reahl-commands>=4.0,<4.1",
    "sqlalchemy>=1.2.0,<1.2.999",
    "alembic>=0.9.6,<0.9.999"
  ]
  migrations = [
    "reahl.sqlalchemysupport.migrations:ChangesToBeMySqlCompatible"
  ]
  [versions.'3.2']
  install_requires = [
    "reahl-component>=3.2,<3.3",
    "sqlalchemy>=0.9.2,<0.9.999",
    "alembic>=0.6,<0.6.999"
  ]
  [versions.'3.1']
  install_requires = [
    "reahl-component>=3.1,<3.2",
    "sqlalchemy>=0.9.2,<0.9.999",
    "alembic>=0.6,<0.6.999"
  ]
  [versions.'3.0']
  install_requires = [
    "reahl-component>=3.0,<3.1",
    "sqlalchemy>=0.9.2,<0.9.999",
    "alembic>=0.6,<0.6.999"
  ]
  migrations = [
    "reahl.sqlalchemysupport.elixirmigration:ElixirToDeclarativeSqlAlchemySupportChanges"
  ]
  [versions.'2.1']
  install_requires = [
    "reahl-component>=2.1,<2.2",
    "sqlalchemy>=0.7,<0.7.999",
    "alembic>=0.5,<0.5.999"
  ]
  [versions.'2.0']
  install_requires = [
    "reahl-component>=2.0,<2.1",
    "sqlalchemy>=0.7,<0.7.999",
    "alembic>=0.5,<0.5.999"
  ]
  migrations = [
    "reahl.sqlalchemysupport.migrations:CreateDatabase"
  ]
  

