[metadata]
name = reahl-sqlalchemysupport
version = 6.1.1
author = Iwan Vosloo
author_email = iwan@reahl.org
description = Support for using SqlAlchemy with Reahl.
long_description = file: README.rst
license_file = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options.packages.find]
exclude = etc, build, dist

[options]
packages = find_namespace:

install_requires =
  reahl-component>=6.1,<6.2
  reahl-commands>=6.1,<6.2
  SQLAlchemy>=1.2.0,<1.4.999
  alembic>=0.9.6,<1.8.999

tests_require =
  pytest>=3.0
  reahl-tofu
  reahl-stubble
  reahl-dev
  reahl-domain
  reahl-sqlitesupport

component = 
  configuration = "reahl.sqlalchemysupport:SqlAlchemyConfig"
  persisted = [
    "reahl.sqlalchemysupport:SchemaVersion"
  ]
  [versions.'6.0']
  install_requires = [
    "reahl-component>=6.0,<6.1",
    "reahl-commands>=6.0,<6.1"
  ]
  [versions.'5.2']
  install_requires = [
    "reahl-component>=5.2,<5.3",
    "reahl-commands>=5.2,<5.3"
  ]
  [versions.'5.1']
  install_requires = [
    "reahl-component>=5.1,<5.2",
    "reahl-commands>=5.1,<5.2"
  ]
  [versions.'5.0']
  install_requires = [
    "reahl-component>=5.0,<5.1",
    "reahl-commands>=5.0,<5.1"
  ]
  [versions.'4.0']
  install_requires = [
    "reahl-component>=4.0,<4.1",
    "reahl-commands>=4.0,<4.1"
  ]
  migrations = [
    "reahl.sqlalchemysupport.migrations:ChangesToBeMySqlCompatible"
  ]
  [versions.'3.2']
  install_requires = [
    "reahl-component>=3.2,<3.3"
  ]
  [versions.'3.1']
  install_requires = [
    "reahl-component>=3.1,<3.2"
  ]
  [versions.'3.0']
  install_requires = [
    "reahl-component>=3.0,<3.1"
  ]
  migrations = [
    "reahl.sqlalchemysupport.elixirmigration:ElixirToDeclarativeSqlAlchemySupportChanges"
  ]
  [versions.'2.1']
  install_requires = [
    "reahl-component>=2.1,<2.2"
  ]
  [versions.'2.0']
  install_requires = [
    "reahl-component>=2.0,<2.1"
  ]
  migrations = [
    "reahl.sqlalchemysupport.migrations:CreateDatabase"
  ]
  

