[build-system]
requires = [
  "setuptools >= 68",
  "wheel",
  "setuptools-git >= 1.1",
  "pytest-runner",
  "toml",
  "reahl-component-metadata >= 7.0.0"
  ]
build-backend = "setuptools.build_meta"

[project]
name = "reahl-sqlitesupport"
version = "7.0.0"
description = "Support for using Sqlite with Reahl."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
  ]
dependencies = [
  "reahl-component>=7.0,<7.1"
  ]
authors = [ 
  {name = "Iwan Vosloo", email = "iwan@reahl.org"},
  {name = "Craig Sparks", email = "craig@reahl.org"}
]

[project.entry-points."reahl.component.databasecontrols"]
SQLiteControl = "reahl.sqlitesupport:SQLiteControl"

[tool.setuptools.packages.find]
exclude = ["etc", "build", "dist"]

[tool.reahl-component.versions."6.1"]
dependencies = [
  "reahl-component>=6.1,<6.2",
  "reahl-commands>=6.1,<6.2"
  ]

[tool.reahl-component.versions."6.0"]
dependencies = [
  "reahl-component>=6.0,<6.1",
  "reahl-commands>=6.0,<6.1"
  ]

[tool.reahl-component.versions."5.2"]
dependencies = [
  "reahl-component>=5.2,<5.3",
  "reahl-commands>=5.2,<5.3"
  ]

[tool.reahl-component.versions."5.1"]
dependencies = [
  "reahl-component>=5.1,<5.2",
  "reahl-commands>=5.1,<5.2"
  ]

[tool.reahl-component.versions."5.0"]
dependencies = [
  "reahl-component>=5.0,<5.1",
  "reahl-commands>=5.0,<5.1"
  ]

[tool.reahl-component.versions."4.0"]
dependencies = [
  "reahl-component>=4.0,<4.1",
  "reahl-commands>=4.0,<4.1"
  ]

[tool.reahl-component.versions."3.2"]
dependencies = [
  "reahl-component>=3.2,<3.3"
  ]

[tool.reahl-component.versions."3.1"]
dependencies = [
  "reahl-component>=3.1,<3.2"
  ]

[tool.reahl-component.versions."3.0"]
dependencies = [
  "reahl-component>=3.0,<3.1"
  ]

[tool.reahl-component.versions."2.1"]
dependencies = [
  "reahl-component>=2.1,<2.2"
  ]

[tool.reahl-component.versions."2.0"]
dependencies = [
  "reahl-component>=2.0,<2.1"
  ]
