[options]
component =
  {
    "versions": {
      "5.2": {
        "install_requires": [
          "reahl-component>=5.2,<5.3",
          "reahl-commands>=5.2,<5.3"
        ]
      },
      "5.1": {
        "install_requires": [
          "reahl-component>=5.1,<5.2",
          "reahl-commands>=5.1,<5.2"
        ]
      },
      "5.0": {
        "install_requires": [
          "reahl-component>=5.0,<5.1",
          "reahl-commands>=5.0,<5.1"
        ]
      },
      "4.0": {
        "install_requires": [
          "reahl-component>=4.0,<4.1",
          "reahl-commands>=4.0,<4.1"
        ]
      },
      "3.2": {
        "install_requires": [
          "reahl-component>=3.2,<3.3"
        ]
      },
      "3.1": {
        "install_requires": [
          "reahl-component>=3.1,<3.2"
        ]
      },
      "3.0": {
        "install_requires": [
          "reahl-component>=3.0,<3.1"
        ]
      },
      "2.1": {
        "install_requires": [
          "reahl-component>=2.1,<2.2"
        ]
      },
      "2.0": {
        "install_requires": [
          "reahl-component>=2.0,<2.1"
        ]
      }
    }
  }

[options.entry_points]
  reahl.component.databasecontrols = 
    SQLiteControl = reahl.sqlitesupport:SQLiteControl


