[options]
component =
  {
    "versions": {
      "5.2": {},
      "5.1": {
        "install_requires": [
          "setuptools>=32.3.1"
        ]
      },
      "5.0": {
        "install_requires": [
          "setuptools>=32.3.1"
        ]
      },
      "4.0": {
        "install_requires": [
          "six",
          "setuptools>=32.3.1"
        ]
      },
      "3.2": {
        "install_requires": [
          "six"
        ]
      },
      "3.1": {
        "install_requires": [
          "six"
        ]
      },
      "3.0": {},
      "2.1": {},
      "2.0": {}
    }
  }

[options.package_data]
  * = 
    */LC_MESSAGES/*.mo


