[options]
component = 
  [tool.reahl-component]
  [versions.'5.2']
  install_requires = [
    "setuptools>=32.3.1"
  ]
  [versions.'5.1']
  install_requires = [
    "setuptools>=32.3.1"
  ]
  [versions.'5.0']
  install_requires = [
    "setuptools>=32.3.1"
  ]
  [versions.'4.0']
  install_requires = [
    "six",
    "setuptools>=32.3.1"
  ]
  [versions.'3.2']
  install_requires = [
    "six"
  ]
  [versions.'3.1']
  install_requires = [
    "six"
  ]
  [versions.'3.0']
  [versions.'2.1']
  [versions.'2.0']
  

