[metadata]
name = reahl-stubble
version = 6.1.1
author = Iwan Vosloo
author_email = iwan@reahl.org
description = Stub tools for use in unit testing
long_description = file: README.rst
license_file = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Testing

[options.packages.find]
exclude = etc, build, dist

[options]
packages = find_namespace:

install_requires =
  setuptools>=51.0.0

tests_require =
  pytest>=3.0
  

